--- a/kelas-5/Petualangan-Kelas-5.html
+++ b/kelas-5/Petualangan-Kelas-5.html
@@ -171,7 +171,7 @@
       <span class="emoji">🌿</span>
       Hutan IPAS
     </a>
-    <a href="gunung.html" class="map-item">
+    <a href="Gunung-Seni-Budaya/gunung.html" class="map-item">
       <span class="emoji">🎨</span>
       Gunung Seni Budaya
     </a>
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
