--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -139,7 +139,7 @@
   <!-- Menu Interaktif -->
   <div class="map-grid">
     <a href="wisata.html" class="map-item"><span class="emoji">🎡</span>Wisata Angka Dari Nol sampai Seratus Ribu</a>
-    <a href="KPK-FPB.html" class="map-item"><span class="emoji">🎯</span>Petualangan Seru Bersama KPK dan FPB</a>
+    <a href="KPK/KPK-FPB.html" class="map-item"><span class="emoji">🎯</span>Petualangan Seru Bersama KPK dan FPB</a>
     <a href="#pintu-geometri" class="map-item"><span class="emoji">🎲</span>Bangun Datar Ajaib</a>
     <a href="#logika-cerdas" class="map-item"><span class="emoji">🏰</span>Kerajaan Pecahan</a>
     <a href="#dunia-matematika" class="map-item"><span class="emoji">🚀</span>Petualangan Pecahan</a>
