--- a/kelas-5/lembah/KPK/kelipatan.html
+++ b/kelas-5/lembah/KPK/kelipatan.html
@@ -127,12 +127,12 @@
 
 <!-- Suara salah -->
 <audio id="salahSound">
-  <source src="tada-234709.mp3" type="audio/mpeg">
+  <source src="../../../tada-234709.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Suara menang -->
 <audio id="menangSound">
-  <source src="menang.mp3" type="audio/mpeg">
+  <source src="../../../menang.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -235,3 +235,4 @@
 
 </body>
 </html>
+
