--- a/kelas-5/lembah/KPK/kelipatan.html
+++ b/kelas-5/lembah/KPK/kelipatan.html
@@ -122,7 +122,7 @@
 <!-- Suara benar -->
 <audio id="benarSound">
   <source src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" type="audio/ogg">
-  <source src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.mp3" type="audio/mpeg">
+  <source src="../../../suara/blub.mp3" type="audio/mpeg">
 </audio>
 
 <!-- Suara salah -->
@@ -235,5 +235,6 @@
 
 </body>
 </html>
+
 
 
