--- a/kelas-5/lembah/KPK/KPK-FPB.html
+++ b/kelas-5/lembah/KPK/KPK-FPB.html
@@ -123,7 +123,7 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="lembah/KPK/lembah.html">◀️ Kembali</a>
+      <a href="KPK/lembah.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
