--- a/kelas-5/lembah/KPK/dunia-faktor.html
+++ b/kelas-5/lembah/KPK/dunia-faktor.html
@@ -198,7 +198,7 @@
     </div>
     <div class="nav-right">
       <a href="/UPT-SD-NEGERI-160-GRESIK/index.html">🏠 Beranda</a>
-      <a href="lembah/lembah.html">◀️ kembali</a>
+      <a href="../lembah.html">◀️ kembali</a>
       <a href="#">🖼️ Galeri</a>
     </div>
   </nav>
@@ -248,3 +248,4 @@
 
 </body>
 </html>
+
