--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
@@ -121,7 +121,7 @@ button:hover {
 <div class="container">
     <div class="nav">
         <a href="../../sejarah-kelahiran-pancasila-5.html">◀️ kembali</a>
-        <a href="Soal_PKn_Kelas_5.pdf" download>📥 Download</a>
+        <a href="Latihan-Soal-1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
         📜 Jakarta Charter Hunt – Petualangan Sejarah
