--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -147,7 +147,9 @@
     <a href="#alam-bentuk" class="map-item"><span class="emoji">🌈</span>Dunia Sudut Ajaib</a>
     <a href="#kerja-sama" class="map-item"><span class="emoji">🔍</span>Detektif Bangun Datar</a>
     <a href="guest.html" class="map-item"><span class="emoji">🕹️</span>Quest Cerdas</a>
-    <a href="AKM.html" class="map-item"><img src="https://i.imgur.com/oDj5njL.png" alt="ANBK" style="width:24px; height:24px; vertical-align:middle; margin-right:6px;">ANBK</a>
+   <a href="AKM.html" class="map-item" style="display: inline-block; text-align: center;">
+  <img src="https://i.imgur.com/oDj5njL.png" alt="ANBK" style="width:50px; height:50px; display:block; margin:0 auto;">
+  <div>ANBK</div>
   </div>
   
   <!-- Suara klik interaktif -->
