--- a/kelas-5/lembah/guest.html
+++ b/kelas-5/lembah/guest.html
@@ -105,7 +105,7 @@ button:hover { opacity: 0.9; }
 <body>
 <div class="container">
     <div class="nav">
-        <a href="🏰Kerajaan-Angka-Ajaib.html">◀️ kembali</a>
+        <a href="lembah.html">◀️ kembali</a>
         <a href="soal-wisata1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -250,4 +250,5 @@ muatUlang();
 </script>
 </body>
 </html>
+
 
