--- a/kelas-5/lembah/AKM/soal1.html
+++ b/kelas-5/lembah/AKM/soal1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soal Susun Balok</title>
+  <title>Soal Latihan ANBK</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,9 +11,21 @@
       margin: 10px;
       background-color: #f5f9ff;
     }
+    /* Kotak judul biru */
+    .judul {
+      background: #007BFF;
+      color: white;
+      padding: 15px;
+      border-radius: 12px;
+      text-align: center;
+      font-size: 1.6rem;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+    /* Kotak soal putih */
     .soal {
       background: #fff;
-      padding: 15px;
+      padding: 20px;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       max-width: 800px;
@@ -21,8 +33,10 @@
     }
     h2 {
       text-align: center;
-      color: #333;
-      font-size: 1.4rem;
+      color: #555;
+      margin-top: 0;
+      margin-bottom: 20px;
+      font-size: 1.2rem;
     }
     .pilihan {
       margin-top: 15px;
@@ -46,11 +60,19 @@
       text-align: center;
       margin: 15px 0;
     }
+    /* Gambar soal lebih kecil */
     .gambar img {
-      max-width: 100%;
+      max-width: 250px;
       height: auto;
       border: 2px solid #ddd;
       border-radius: 8px;
+    }
+    /* Gambar opsi jawaban lebih kecil */
+    .pilihan img {
+      max-width: 120px;
+      height: auto;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
     .pembahasan {
       margin-top: 20px;
@@ -59,7 +81,7 @@
       border-left: 5px solid #28a745;
       border-radius: 8px;
       font-size: 0.95rem;
-      display: none; /* sembunyikan dulu, muncul setelah klik jawaban */
+      display: none;
     }
     .feedback {
       margin-top: 15px;
@@ -99,7 +121,7 @@
     .btn-lanjut:hover {
       background-color: #449d44;
     }
-    /* Responsif untuk layar kecil */
+    /* Responsif */
     @media (max-width: 600px) {
       body {
         margin: 5px;
@@ -107,23 +129,33 @@
       .soal {
         padding: 12px;
       }
+      .judul {
+        font-size: 1.3rem;
+        padding: 12px;
+      }
       h2 {
-        font-size: 1.2rem;
+        font-size: 1rem;
       }
       .pilihan div {
         font-size: 0.9rem;
         flex-direction: column;
         align-items: flex-start;
       }
+      .gambar img {
+        max-width: 180px;
+      }
       .pilihan img {
-        max-width: 100%;
+        max-width: 100px;
       }
     }
   </style>
 </head>
 <body>
+  <div class="judul">SOAL LATIHAN ANBK</div>
+
   <div class="soal">
-    <h2>Soal Susun Balok</h2>
+    <h2>Soal Latihan 1</h2>
+
     <p>
       Dimas, Suta dan Beta bermain susun balok dengan cara menyusun balok sesuai pola. 
       Wasit akan meletakkan balok-balok yang masing-masing berisi satu bilangan pada 
@@ -168,8 +200,8 @@
         <li>
           Diterapkan pada pola bilangan di empat kotak yang disusun wasit, yaitu <b>2 - 4 - 6 - 8</b>,  
           ke arah kanan setiap bilangan bertambah 2.  
-          Maka susunan di atasnya dengan pola yang sama, ditambah 2 ke arah kiri menjadi <b>14 - 12 - 10</b>.  
-          Jadi jawabannya adalah <b>A</b>.
+          Maka susunan di atasnya dengan pola yang sama, ditambah 2 ke arah kiri menjadi <b>10 - 12 - 14</b>.  
+          Jadi jawabannya adalah <b>A (opsi pilihan 1)</b>.
         </li>
       </ol>
     </div>
