--- a/kelas-5/lembah/AKM/soal1.html
+++ b/kelas-5/lembah/AKM/soal1.html
@@ -207,8 +207,8 @@
     </div>
 
     <div class="navigasi">
-      <a href="soal-sebelumnya.html" class="btn-kembali">⬅ Kembali</a>
-      <a href="soal-berikutnya.html" class="btn-lanjut">Lanjut ➡</a>
+      <a href="AKM.html" class="btn-kembali">⬅ Kembali</a>
+      <a href="soal2.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
 
@@ -230,3 +230,4 @@
   </script>
 </body>
 </html>
+
