--- a/kelas-5/lembah/AKM/soal1.html
+++ b/kelas-5/lembah/AKM/soal1.html
@@ -208,7 +208,7 @@
 
     <div class="navigasi">
       <a href="AKM.html" class="btn-kembali">⬅ Kembali</a>
-      <a href="soal2.html" class="btn-lanjut">Lanjut ➡</a>
+      <a href="AKM.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
 
@@ -230,4 +230,5 @@
   </script>
 </body>
 </html>
+
 
