--- a/kelas-5/lembah/AKM/AKM.html
+++ b/kelas-5/lembah/AKM/AKM.html
@@ -66,8 +66,8 @@ h1 img {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../AKM/lembah.html">◀️ kembali</a>
-        <a href="soal-wisata1.pdf" download>📥 Download</a>
+        <a href="lembah/lembah.html">◀️ kembali</a>
+        <a href=#"soal-wisata1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
         <img src="https://i.imgur.com/oDj5njL.png" alt="Ikon"> Latihan Soal ANBK
@@ -110,4 +110,5 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
