--- a/kelas-5/lembah/AKM/AKM.html
+++ b/kelas-5/lembah/AKM/AKM.html
@@ -66,7 +66,7 @@ h1 img {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="lembah/lembah.html">◀️ kembali</a>
+        <a href="../lembah.html">◀️ kembali</a>
         <a href=#"soal-wisata1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -110,5 +110,6 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
 
