--- a/kelas-5/lembah/AKM/soal1.html
+++ b/kelas-5/lembah/AKM/soal1.html
@@ -99,6 +99,8 @@
       margin-top: 25px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      gap: 15px;
     }
     .navigasi a {
       text-decoration: none;
@@ -120,6 +122,10 @@
     }
     .btn-lanjut:hover {
       background-color: #449d44;
+    }
+    /* Gambar di navigasi */
+    .navigasi img {
+      max-height: 40px;
     }
     /* Responsif */
     @media (max-width: 600px) {
@@ -146,6 +152,9 @@
       }
       .pilihan img {
         max-width: 100px;
+      }
+      .navigasi img {
+        max-height: 30px;
       }
     }
   </style>
@@ -208,6 +217,7 @@
 
     <div class="navigasi">
       <a href="AKM.html" class="btn-kembali">⬅ Kembali</a>
+      <img src="https://i.imgur.com/LqQVDoS.png" alt="Ikon Navigasi">
       <a href="AKM.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
@@ -230,5 +240,3 @@
   </script>
 </body>
 </html>
-
-
